[gd_scene load_steps=16 format=3 uid="uid://b6verfa8xjl4v"]

[ext_resource type="Script" path="res://scenes/shaders/shaders.gd" id="1_f1fi4"]
[ext_resource type="PackedScene" uid="uid://dln02b3s5dgp0" path="res://scenes/background/background.tscn" id="2_8bmms"]
[ext_resource type="Resource" uid="uid://vmr45pmdlpyc" path="res://resources/shader_material_list/shader_material_list.tres" id="2_t7mqe"]
[ext_resource type="StyleBox" uid="uid://v1pgvqqrkx1m" path="res://resources/theme/style_box_flat/black_panel.tres" id="2_ya8g1"]
[ext_resource type="Texture2D" uid="uid://dbqquq6h7aafu" path="res://images/pisilohepunane3.png" id="3_sopuq"]
[ext_resource type="Material" uid="uid://dxai4ao6ii8wf" path="res://resources/shader_material/aura.tres" id="4_f1eh3"]
[ext_resource type="Material" uid="uid://bw2yfhvbtkp0q" path="res://resources/shader_material/blur.tres" id="6_54oe2"]
[ext_resource type="Material" uid="uid://lhbk085f0i6x" path="res://resources/shader_material/dissintegrate.tres" id="7_1oc8r"]
[ext_resource type="Material" uid="uid://ti3igq5o2705" path="res://resources/shader_material/fisheye.tres" id="8_3sxyw"]
[ext_resource type="Material" uid="uid://drhlyq8y68814" path="res://resources/shader_material/glow.tres" id="9_qicfe"]
[ext_resource type="Material" uid="uid://b2hdibmewsoqj" path="res://resources/shader_material/offset_shadow.tres" id="10_fktlc"]
[ext_resource type="Material" uid="uid://vkjycfa1xrqh" path="res://resources/shader_material/outline.tres" id="11_x3okw"]
[ext_resource type="Shortcut" uid="uid://ck38hryheyrjn" path="res://resources/shortcut/back_shortcut.tres" id="12_q5mv1"]
[ext_resource type="Material" uid="uid://w5i2mafmyay2" path="res://resources/shader_material/silouette.tres" id="12_rjgkx"]
[ext_resource type="Material" uid="uid://bw5h4v21esbek" path="res://resources/shader_material/drop_shadow.tres" id="13_jio5o"]

[node name="Shaders" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f1fi4")
shader_material_list = ExtResource("2_t7mqe")

[node name="Background" parent="." instance=ExtResource("2_8bmms")]
layout_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ShaderLoading" type="PanelContainer" parent="MarginContainer/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/panel = ExtResource("2_ya8g1")

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/CenterContainer/ShaderLoading"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/CenterContainer/ShaderLoading/CenterContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer/ShaderLoading/CenterContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/CenterContainer/ShaderLoading/CenterContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Loading shaders"

[node name="ShaderProgressBar" type="ProgressBar" parent="MarginContainer/CenterContainer/ShaderLoading/CenterContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="LoadedShaders" type="HFlowContainer" parent="MarginContainer/CenterContainer/ShaderLoading/CenterContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Shaders" type="PanelContainer" parent="MarginContainer/CenterContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_styles/panel = ExtResource("2_ya8g1")

[node name="FlowContainer" type="GridContainer" parent="MarginContainer/CenterContainer/Shaders"]
layout_mode = 2
columns = 3

[node name="Aura" type="VBoxContainer" parent="MarginContainer/CenterContainer/Shaders/FlowContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/CenterContainer/Shaders/FlowContainer/Aura"]
material = ExtResource("4_f1eh3")
layout_mode = 2
texture = ExtResource("3_sopuq")
stretch_mode = 5

[node name="Label" type="Label" parent="MarginContainer/CenterContainer/Shaders/FlowContainer/Aura"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Aura"
horizontal_alignment = 1

[node name="Blur" type="VBoxContainer" parent="MarginContainer/CenterContainer/Shaders/FlowContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/CenterContainer/Shaders/FlowContainer/Blur"]
material = ExtResource("6_54oe2")
layout_mode = 2
texture = ExtResource("3_sopuq")
stretch_mode = 5

[node name="Label" type="Label" parent="MarginContainer/CenterContainer/Shaders/FlowContainer/Blur"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Blur"
horizontal_alignment = 1

[node name="Dissintegrate" type="VBoxContainer" parent="MarginContainer/CenterContainer/Shaders/FlowContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/CenterContainer/Shaders/FlowContainer/Dissintegrate"]
material = ExtResource("7_1oc8r")
layout_mode = 2
texture = ExtResource("3_sopuq")
stretch_mode = 5

[node name="Label" type="Label" parent="MarginContainer/CenterContainer/Shaders/FlowContainer/Dissintegrate"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Dissintegrate"
horizontal_alignment = 1

[node name="Fisheye" type="VBoxContainer" parent="MarginContainer/CenterContainer/Shaders/FlowContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/CenterContainer/Shaders/FlowContainer/Fisheye"]
material = ExtResource("8_3sxyw")
layout_mode = 2
texture = ExtResource("3_sopuq")
stretch_mode = 5

[node name="Label" type="Label" parent="MarginContainer/CenterContainer/Shaders/FlowContainer/Fisheye"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Fisheye"
horizontal_alignment = 1

[node name="Glow" type="VBoxContainer" parent="MarginContainer/CenterContainer/Shaders/FlowContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/CenterContainer/Shaders/FlowContainer/Glow"]
material = ExtResource("9_qicfe")
layout_mode = 2
texture = ExtResource("3_sopuq")
stretch_mode = 5

[node name="Label" type="Label" parent="MarginContainer/CenterContainer/Shaders/FlowContainer/Glow"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Glow"
horizontal_alignment = 1

[node name="OffsetShadow" type="VBoxContainer" parent="MarginContainer/CenterContainer/Shaders/FlowContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/CenterContainer/Shaders/FlowContainer/OffsetShadow"]
material = ExtResource("10_fktlc")
layout_mode = 2
texture = ExtResource("3_sopuq")
stretch_mode = 5

[node name="Label" type="Label" parent="MarginContainer/CenterContainer/Shaders/FlowContainer/OffsetShadow"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Offset Shadow"
horizontal_alignment = 1

[node name="Outline" type="VBoxContainer" parent="MarginContainer/CenterContainer/Shaders/FlowContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/CenterContainer/Shaders/FlowContainer/Outline"]
material = ExtResource("11_x3okw")
layout_mode = 2
texture = ExtResource("3_sopuq")
stretch_mode = 5

[node name="Label" type="Label" parent="MarginContainer/CenterContainer/Shaders/FlowContainer/Outline"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Outline"
horizontal_alignment = 1

[node name="Silouette" type="VBoxContainer" parent="MarginContainer/CenterContainer/Shaders/FlowContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/CenterContainer/Shaders/FlowContainer/Silouette"]
material = ExtResource("12_rjgkx")
layout_mode = 2
texture = ExtResource("3_sopuq")
stretch_mode = 5

[node name="Label" type="Label" parent="MarginContainer/CenterContainer/Shaders/FlowContainer/Silouette"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Silouette"
horizontal_alignment = 1

[node name="DropShadow" type="VBoxContainer" parent="MarginContainer/CenterContainer/Shaders/FlowContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/CenterContainer/Shaders/FlowContainer/DropShadow"]
material = ExtResource("13_jio5o")
layout_mode = 2
texture = ExtResource("3_sopuq")
stretch_mode = 5

[node name="Label" type="Label" parent="MarginContainer/CenterContainer/Shaders/FlowContainer/DropShadow"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Drop Shadow"
horizontal_alignment = 1

[node name="Back" type="Button" parent="MarginContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
shortcut = ExtResource("12_q5mv1")
text = "Back"

[node name="Shaders" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Shaders"

[connection signal="value_changed" from="MarginContainer/CenterContainer/ShaderLoading/CenterContainer/MarginContainer/VBoxContainer/ShaderProgressBar" to="." method="_on_shader_progress_bar_value_changed"]
[connection signal="pressed" from="MarginContainer/Back" to="." method="_on_back_pressed"]
